Save before changing main file

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,12 @@
 </head>
 <body>
     <h1>Speech to Text</h1>
+    <div id="audio">
+    <p>1 Page contains around 2300 characters thats around 30 lines </p>
     <form action="/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file" accept=".wav,.mp3">
         <input type="submit" value="Upload">
     </form>
+    </div>
 </body>
 </html>
