--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -5,16 +5,17 @@
     font-family: 'Ysabeau SC';
     width: 100%;
     position: absolute;
-    top:40vh;
+    top:35vh;
     text-shadow: 5px 5px #000;
     
     
 }
 
 .context22 h1{
+    font-family: 'Dancing Script';
     text-align: center;
-    color: #e1dede;
-    font-size: 55px;
+    color: #c9c7c7;
+    font-size: 65px;
     font-weight: 600;
 }
 .context22 h2{
@@ -64,78 +65,72 @@
     animation: animate 25s linear infinite;
     bottom: -150px;
 	border-radius:50%;
-	height:16px;
-	width:16px;
+	height:32px;
+	width:32px;
 	border:2px #20ce88 solid;
 	background:#000;
 }
 .circlesgum:nth-child(1){
      left: 30%;
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
     animation-delay: 0s;
-     animation: animate 15s linear infinite;
+     animation: animate 20s linear infinite;
 }
 .circlesgum:nth-child(2){
      left: 60%;
-    width: 40px;
-    height: 40px;
-    animation-delay: 3s;
+    width: 80px;
+    height: 80px;
+    animation-delay: 5s;
 }
 .circlesgum:nth-child(3){
      left: 40%;
-    width: 40px;
-    height: 40px;
-    animation-delay: 9s;
+    width: 80px;
+    height: 80px;
+    animation-delay: 15s;
 }
 .circlesgum:nth-child(4){
      left: 40%;
-    width: 40px;
-    height: 40px;
-    animation-delay: 15s;
+    width: 80px;
+    height: 80px;
+    animation-delay: 20s;
 }
 .circles:nth-child(1){
     left: 25%;
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
     animation-delay: 0s;
 }
 
 
 .circles:nth-child(2){
     left: 10%;
-    width: 60px;
-    height: 60px;
+    width: 120px;
+    height: 120px;
     animation-delay: 2s;
-    animation-duration: 6s;
+    animation-duration: 12s;
 }
 
 .circles:nth-child(3){
     left: 70%;
-    width: 60px;
-    height: 60px;
+    width: 120px;
+    height: 120px;
     animation-delay: 2s;
-}
-.circles:nth-child(11){
-    left: 70%;
-    width: 40px;
-    height: 40px;
-    animation-delay: 0s;
 }
 
 
 .circles:nth-child(4){
     left: 40%;
-    width: 32px;
-    height: 32px;
+    width: 64px;
+    height: 64px;
     animation-delay: 0s;
-    animation-duration: 13s;
+    animation-duration: 18s;
 }
 
 .circles:nth-child(5){
     left: 65%;
-    width: 40px;
-    height: 40px;
+    width: 80px;
+    height: 80px;
     animation-delay: 0s;
 }
 
@@ -143,13 +138,13 @@
     left: 75%;
     width: 30px;
     height: 30px;
-    animation-delay: 1s;
+    animation-delay: 3s;
 }
 
 .circles:nth-child(7){
     left: 35%;
-    width: 16px;
-    height: 16px;
+    width: 32px;
+    height: 32px;
     animation-delay: 5s;
 }
 
@@ -158,39 +153,33 @@
     width: 50px;
     height: 50px;
     animation-delay: 15s;
-    animation-duration: 30s;
+    animation-duration: 45s;
 }
 
 .circles:nth-child(9){
     left: 20%;
-    width: 60px;
-    height: 60px;
+    width: 120px;
+    height: 120px;
     animation-delay: 2s;
-    animation-duration: 25s;
+    animation-duration: 35s;
 }
 
 .circles:nth-child(10){
     left: 85%;
-    width: 32px;
-    height: 32px;
+    width: 64px;
+    height: 64px;
     animation-delay: 0s;
-    animation-duration: 7s;
+    animation-duration: 11s;
 }
 
 .circles:nth-child(11){
     left: 55%;
-    width: 32px;
-    height: 32px;
+    width: 64px;
+    height: 64px;
     animation-delay: 0s;
-    animation-duration: 3s;
+    animation-duration: 15s;
 }
-.circles:nth-child(11){
-    left: 30%;
-    width: 32px;
-    height: 32px;
-    animation-delay: 0s;
-    animation-duration: 7s;
-}
+
 
 @keyframes animate {
 
