--- a/templates/about.html
+++ b/templates/about.html
@@ -48,7 +48,7 @@
       <div class="aboutme">
         <h4>About Me</h4>
         <div style="text-align:center;">
-        <img src="{{  url_for('static', filename='Myimage.jpeg')  }}">
+        <img src="{{  url_for('static', filename='images/Myimage.jpeg')  }}">
         </div>
         <p id='info' >
             Name:- Pratyush Arora<br>
